Fix toolbar margins and icon alignments
- Fixed the horizontal and vertical alignments of the icons used in the
  snap toolbar.

- Added the `toolbar` style class to the snap toolbar.

- Adjusted the `toolbar` style class by adding left and right margins,
  promoting a cleaner visual layout

Fixes: https://gitlab.com/inkscape/inkscape/-/issues/4881,
       https://gitlab.com/inkscape/inbox/-/issues/10361

--- a/share/ui/style.css
+++ b/share/ui/style.css
@@ -771,7 +771,7 @@ button.square-button image {
 }
 
 .inkscape-toolbar {
-    margin: 4px 2px;
+    margin: 4px;
 }
 
 .inkscape-toolbar > * {
